package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// AccountType はアカウントタイプマスタの互換エイリアスです。
type AccountType = master.AccountType
