package entity

import (
	"encoding/hex"
	"errors"
	"time"

	"github.com/chunisupport/chunisupport-api/internal/domain/vo/apitokenname"
	"github.com/chunisupport/chunisupport-api/internal/domain/vo/apitokenpermission"
)

const apiTokenHashLength = 64

var (
	ErrAPITokenIDInvalid         = errors.New("API token id is invalid")
	ErrAPITokenUserIDInvalid     = errors.New("API token user id is invalid")
	ErrAPITokenHashInvalid       = errors.New("API token hash is invalid")
	ErrAPITokenPrefixInvalid     = errors.New("API token prefix is invalid")
	ErrAPITokenPermissionInvalid = apitokenpermission.ErrInvalidAPITokenPermission
)

// APIToken は外部APIで利用する永続化トークンを表します。
type APIToken struct {
	ID          uint64
	UserID      int
	Name        apitokenname.APITokenName
	Permission  apitokenpermission.APITokenPermission
	HashedToken string
	TokenPrefix *string
	LastUsedAt  *time.Time
	CreatedAt   time.Time
}

// NewAPIToken は権限付きの新規APIトークンを生成します。
func NewAPIToken(userID int, name string, hashedToken string, tokenPrefix string, permission string) (*APIToken, error) {
	validatedName, err := apitokenname.NewAPITokenName(name)
	if err != nil {
		return nil, err
	}
	if userID <= 0 {
		return nil, ErrAPITokenUserIDInvalid
	}
	if !isValidAPITokenHash(hashedToken) {
		return nil, ErrAPITokenHashInvalid
	}
	if len(tokenPrefix) != 5 {
		return nil, ErrAPITokenPrefixInvalid
	}
	validatedPermission, err := apitokenpermission.NewAPITokenPermission(permission)
	if err != nil {
		return nil, ErrAPITokenPermissionInvalid
	}
	prefix := tokenPrefix
	return &APIToken{
		UserID:      userID,
		Name:        validatedName,
		Permission:  validatedPermission,
		HashedToken: hashedToken,
		TokenPrefix: &prefix,
	}, nil
}

// RestoreAPIToken は永続化済みデータからAPIトークンを復元します。
// 旧仕様のトークンは表示用prefixを保持していないため、nilを許容します。
func RestoreAPIToken(id uint64, userID int, name string, hashedToken string, tokenPrefix *string, lastUsedAt *time.Time, createdAt time.Time, permission string) (*APIToken, error) {
	if id == 0 {
		return nil, ErrAPITokenIDInvalid
	}
	validatedName, err := apitokenname.NewAPITokenName(name)
	if err != nil {
		return nil, err
	}
	if userID <= 0 {
		return nil, ErrAPITokenUserIDInvalid
	}
	if !isValidAPITokenHash(hashedToken) {
		return nil, ErrAPITokenHashInvalid
	}
	if tokenPrefix != nil && len(*tokenPrefix) != 5 {
		return nil, ErrAPITokenPrefixInvalid
	}
	validatedPermission, err := apitokenpermission.NewAPITokenPermission(permission)
	if err != nil {
		return nil, ErrAPITokenPermissionInvalid
	}
	return &APIToken{
		ID:          id,
		UserID:      userID,
		Name:        validatedName,
		Permission:  validatedPermission,
		HashedToken: hashedToken,
		TokenPrefix: cloneStringPointer(tokenPrefix),
		LastUsedAt:  cloneTimePointer(lastUsedAt),
		CreatedAt:   createdAt,
	}, nil
}

// Rename はAPIトークンの表示名を変更します。
func (t *APIToken) Rename(name string) error {
	validatedName, err := apitokenname.NewAPITokenName(name)
	if err != nil {
		return err
	}
	t.Name = validatedName
	return nil
}

// CanWrite は更新系APIを利用できるトークンかを返します。
func (t *APIToken) CanWrite() bool {
	return t.Permission.CanWrite()
}

// ShouldRecordUsage は最終利用日時を永続化する間隔を経過したか判定します。
func (t *APIToken) ShouldRecordUsage(now time.Time, interval time.Duration) bool {
	return t.LastUsedAt == nil || !now.Before(t.LastUsedAt.Add(interval))
}

// RecordUsage は最終利用日時を更新します。
func (t *APIToken) RecordUsage(usedAt time.Time) {
	t.LastUsedAt = &usedAt
}

func isValidAPITokenHash(value string) bool {
	if len(value) != apiTokenHashLength {
		return false
	}
	_, err := hex.DecodeString(value)
	return err == nil
}

func cloneStringPointer(value *string) *string {
	if value == nil {
		return nil
	}
	copyValue := *value
	return &copyValue
}

func cloneTimePointer(value *time.Time) *time.Time {
	if value == nil {
		return nil
	}
	copyValue := *value
	return &copyValue
}
