package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// ClassEmblem はクラスエンブレムマスタの互換エイリアスです。
type ClassEmblem = master.ClassEmblem
