package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// ClearLampType はクリアランプマスタの互換エイリアスです。
type ClearLampType = master.ClearLampType
