package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// ComboLampType はコンボランプマスタの互換エイリアスです。
type ComboLampType = master.ComboLampType
