package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// FullChainType はフルチェインランプマスタの互換エイリアスです。
type FullChainType = master.FullChainType
