package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// Genre はジャンルマスタの互換エイリアスです。
type Genre = master.Genre
