package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// HonorType は称号種類マスタの互換エイリアスです。
type HonorType = master.HonorType
