package entity

import "github.com/chunisupport/chunisupport-api/internal/domain/vo/master"

// Slot はプレイヤーレコードのスロット種別の互換エイリアスです。
type Slot = master.Slot
