@startuml ER図

!theme vibrant

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' entities

entity "users" as users {
  + id: INT [PK]
  --
  username: VARCHAR(50) NOT NULL UNIQUE
  firebase_uid: VARCHAR(128) NULL [UNIQUE]
  account_type_id: TINYINT NOT NULL
  player_id: INT UNSIGNED NULL [UNIQUE]
  is_private: BOOLEAN NOT NULL
  is_suspicious: BOOLEAN NOT NULL
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "api_tokens" as api_tokens {
  + id: BIGINT [PK]
  --
  user_id: INT NOT NULL
  name: VARCHAR(50) NOT NULL [UNIQUE WITH user_id]
  permission: VARCHAR(10) NOT NULL [read/read_write]
  hashed_token: CHAR(64) NOT NULL [UNIQUE]
  token_prefix: CHAR(5)
  last_used_at: DATETIME
  created_at: TIMESTAMP
}

entity "players" as players {
  + id: INT UNSIGNED [PK]
  --
  user_id: INT NOT NULL [UNIQUE]
  player_name: VARCHAR(20) NOT NULL
  player_level: INT NOT NULL
  official_player_rating: DECIMAL(4, 2) NOT NULL
  calculated_player_rating: DECIMAL(6, 4)
  new_average_rating: DECIMAL(6, 4)
  best_average_rating: DECIMAL(6, 4)
  class_emblem_id: TINYINT
  class_emblem_base_id: TINYINT
  possession_id: TINYINT UNSIGNED NOT NULL
  last_played_at: DATETIME
  overpower_value: DECIMAL(9, 3)
  official_overpower: DECIMAL(8, 2) NOT NULL
  official_overpower_percent: DECIMAL(5, 2)
  data_collected_at: TIMESTAMP
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "possessions" as possessions {
  + id: TINYINT UNSIGNED [PK]
  --
  name: VARCHAR(10) NOT NULL UNIQUE
}

entity "player_metric_histories" as player_metric_histories {
  + player_id: INT UNSIGNED [PK, FK]
  + data_collected_at: TIMESTAMP [PK]
  --
  official_rating: DECIMAL(4, 2) NOT NULL
  official_overpower: DECIMAL(8, 2) NOT NULL
  official_overpower_percent: DECIMAL(5, 2)
}

players ||--o{ player_metric_histories

entity "player_honors" as player_honors {
  + player_id: INT UNSIGNED [PK, FK]
  + honor_id: INT [PK, FK]
  --
  slot: TINYINT NOT NULL
  created_at: TIMESTAMP
}

entity "honors" as honors {
    + id: INT [PK]
    --
    name: VARCHAR(500) NOT NULL
    honor_type_id: TINYINT NOT NULL
    image_url: VARCHAR(255)
    created_at: TIMESTAMP
}

entity "player_records" as player_records {
  + player_id: INT UNSIGNED [PK, FK]
  + chart_id: MEDIUMINT UNSIGNED [PK, FK]
  --
  score: MEDIUMINT UNSIGNED NOT NULL
  clear_lamp_id: TINYINT NOT NULL
  combo_lamp_id: TINYINT NOT NULL
  full_chain_id: TINYINT NOT NULL
  slot_id: TINYINT NOT NULL
  slot_order: TINYINT NULL
  updated_at: TIMESTAMP
}

entity "player_worldsend_records" as player_worldsend_records {
  + player_id: INT UNSIGNED [PK, FK]
  + worldsend_chart_id: MEDIUMINT UNSIGNED [PK, FK]
  --
  score: MEDIUMINT UNSIGNED NOT NULL
  clear_lamp_id: TINYINT NOT NULL
  combo_lamp_id: TINYINT NOT NULL
  full_chain_id: TINYINT NOT NULL
  updated_at: TIMESTAMP
}

entity "songs" as songs {
  + id: INT [PK]
  --
  display_id: CHAR(16) UNIQUE NOT NULL
  title: VARCHAR(300) NOT NULL
  wiki_page_title: VARCHAR(300)
  artist: VARCHAR(300) NOT NULL
  genre_id: TINYINT NOT NULL
  bpm: INT
  released_at: DATE
  official_idx: VARCHAR(10) UNIQUE
  jacket: VARCHAR(20)
  is_worldsend: BOOLEAN NOT NULL
  is_deleted: TINYINT(1) NOT NULL
  updated_at: TIMESTAMP
}

entity "charts" as charts {
  + id: MEDIUMINT UNSIGNED [PK]
  --
  song_id: INT NOT NULL
  difficulty_id: TINYINT NOT NULL
  const: DECIMAL(3, 1) NOT NULL
  is_const_unknown: BOOLEAN NOT NULL
  notes: INT
  notes_designer: VARCHAR(100)
  updated_at: TIMESTAMP
}

entity "worldsend_charts" as worldsend_charts {
  + id: MEDIUMINT UNSIGNED [PK]
  --
  song_id: INT NOT NULL [UNIQUE]
  level_star: TINYINT
  attribute: CHAR(1)
  notes: INT
  notes_designer: VARCHAR(100)
  updated_at: TIMESTAMP
}

' master tables
entity "genres" as genres {
  + id: TINYINT [PK]
  --
  name: VARCHAR(30) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "difficulties" as difficulties {
  + id: TINYINT [PK]
  --
  name: VARCHAR(30) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "class_emblems" as class_emblems {
  + id: TINYINT [PK]
  --
  name: VARCHAR(10) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "class_emblem_bases" as class_emblem_bases {
  + id: TINYINT [PK]
  --
  name: VARCHAR(10) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "clear_lamp_types" as clear_lamp_types {
  + id: TINYINT [PK]
  --
  name: VARCHAR(20) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "combo_lamp_types" as combo_lamp_types {
  + id: TINYINT [PK]
  --
  name: VARCHAR(20) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "slots" as slots {
  + id: TINYINT UNSIGNED [PK]
  --
  name: VARCHAR(30) NOT NULL UNIQUE
}

entity "full_chain_types" as full_chain_types {
  + id: TINYINT [PK]
  --
  name: VARCHAR(20) NOT NULL UNIQUE
  sort_order: TINYINT NOT NULL
}

entity "honor_types" as honor_types {
  + id: TINYINT [PK]
  --
  name: VARCHAR(50) NOT NULL UNIQUE
}

entity "account_types" as account_types {
  + id: TINYINT [PK]
  --
  name: VARCHAR(20) NOT NULL UNIQUE
}

entity "versions" as versions {
  + id: TINYINT [PK]
  --
  name: VARCHAR(50) NOT NULL UNIQUE
  released_at: DATE NOT NULL
}


' relationships
users ||--|o players
users ||--o{ api_tokens
users }o--|| account_types

players ||--o{ player_records
players ||--o{ player_worldsend_records
players ||--o{ player_honors
players }o--|| class_emblems
players }o--|| class_emblem_bases
players }|--|| possessions

honors ||--o{ player_honors
honors }o--|| honor_types

player_records }|--|| charts
player_records }o--|| clear_lamp_types
player_records }o--|| combo_lamp_types
player_records }o--|| full_chain_types
player_records }o--|| slots

player_worldsend_records }|--|| worldsend_charts
player_worldsend_records }o--|| clear_lamp_types
player_worldsend_records }o--|| combo_lamp_types
player_worldsend_records }o--|| full_chain_types

charts }|--|| songs
charts }o--|| difficulties

songs ||--|o worldsend_charts

songs }o--|| genres

@enduml
